@@ -452,8 +452,7 @@ public class ActivationKeyHandler extends BaseHandler {
         }
 
         if (details.containsKey("usage_limit")) {
-            Long usageLimit = new Long(((Integer) details.get("usage_limit"))
-                    .longValue());
+            Long usageLimit = Long.valueOf(((Integer) details.get("usage_limit")));
             aKey.setUsageLimit(usageLimit);
         }
 
@@ -682,7 +681,7 @@ public class ActivationKeyHandler extends BaseHandler {
             ManagedServerGroup group = null;
             try {
                 group = ServerGroupManager.getInstance().lookup(
-                        new Long(serverGroupId.longValue()), loggedInUser);
+                        serverGroupId.longValue(), loggedInUser);
             }
             catch (LookupException e) {
                 throw new InvalidServerGroupException(e);
@@ -719,7 +718,7 @@ public class ActivationKeyHandler extends BaseHandler {
             ServerGroup group = null;
             try {
                 group = ServerGroupManager.getInstance().lookup(
-                        new Long(serverGroupId.longValue()), loggedInUser);
+                        serverGroupId.longValue(), loggedInUser);
             }
             catch (LookupException e) {
                 throw new InvalidServerGroupException(e);
